--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     function handleCredentialResponse(response) {
       console.log("ID token: " + response.credential);
       alert("Autenticación exitosa. ID token: " + response.credential);
-      initializeBloggerAPI();
+      initializeBloggerAPI(response.credential);
     }
 
     window.onload = function () {
@@ -33,13 +33,37 @@
       google.accounts.id.prompt();
     };
 
-    function initializeBloggerAPI() {
+    function initializeBloggerAPI(idToken) {
       gapi.load('client', () => {
         gapi.client.init({
           apiKey: API_KEY,
           discoveryDocs: ["https://www.googleapis.com/discovery/v1/apis/blogger/v3/rest"]
         }).then(() => {
-          document.getElementById('post-button').disabled = false;
+          // Verify the token and get the user's information
+          gapi.client.request({
+            path: `https://oauth2.googleapis.com/tokeninfo?id_token=${idToken}`
+          }).then(response => {
+            const userEmail = response.result.email;
+            console.log("User email:", userEmail);
+
+            // Check if the user has access to the blog
+            gapi.client.blogger.blogs.get({
+              blogId: BLOG_ID
+            }).then(blogResponse => {
+              const blogAuthors = blogResponse.result.users;
+              if (blogAuthors.includes(userEmail)) {
+                document.getElementById('post-button').disabled = false;
+              } else {
+                alert("El usuario autenticado no tiene permisos para publicar en este blog.");
+              }
+            }).catch(err => {
+              console.error("Error al obtener el blog:", err);
+              alert("Error al obtener el blog: " + err.result.error.message);
+            });
+          }).catch(err => {
+            console.error("Error al verificar el token:", err);
+            alert("Error al verificar el token: " + err.result.error.message);
+          });
         }).catch(err => {
           console.error("Error al inicializar Blogger API", err);
         });
