--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Google Auth GIS y Publicación en Blogger</title>
-  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <title>Google Auth y Publicación en Blogger</title>
   <script src="https://apis.google.com/js/api.js"></script>
   <script>
     const CLIENT_ID = "338010031407-a0qku90nm9atgjsgirdg9i40av85ptbn.apps.googleusercontent.com";
@@ -12,62 +11,81 @@
     const BLOG_ID = "6423620772115300042";
     const SCOPES = "https://www.googleapis.com/auth/blogger";
 
-    // Callback para manejar la respuesta del token
-    function handleCredentialResponse(response) {
-      console.log("ID token: " + response.credential);
-      alert("Autenticación exitosa. ID token: " + response.credential);
-      initializeBloggerAPI();
+    let accessToken = null;
+
+    function logMessage(message) {
+      document.getElementById('log').innerHTML += `<p>${message}</p>`;
+      alert(message);
     }
 
-    window.onload = function () {
-      google.accounts.id.initialize({
-        client_id: CLIENT_ID,
-        callback: handleCredentialResponse,
-      });
-
-      google.accounts.id.renderButton(
-        document.getElementById("buttonDiv"),
-        { theme: "outline", size: "large" }
-      );
-
-      google.accounts.id.prompt();
-    };
-
-    function initializeBloggerAPI() {
-      gapi.load('client', () => {
+    function initClient() {
+      gapi.load('client:auth2', () => {
         gapi.client.init({
           apiKey: API_KEY,
-          discoveryDocs: ["https://www.googleapis.com/discovery/v1/apis/blogger/v3/rest"]
+          clientId: CLIENT_ID,
+          discoveryDocs: ["https://www.googleapis.com/discovery/v1/apis/blogger/v3/rest"],
+          scope: SCOPES
         }).then(() => {
-          document.getElementById('post-button').disabled = false;
-        }).catch(err => {
-          console.error("Error al inicializar Blogger API", err);
+          if (gapi.auth2.getAuthInstance().isSignedIn.get()) {
+            updateSigninStatus(true);
+          }
+          document.getElementById('auth-button').disabled = false;
+          logMessage("API inicializada correctamente");
+        }).catch(error => {
+          logMessage("Error al inicializar API: " + error.message);
         });
       });
     }
 
+    function handleAuthClick() {
+      gapi.auth2.getAuthInstance().signIn().then(user => {
+        updateSigninStatus(true);
+        logMessage("Autenticación exitosa");
+      }).catch(error => {
+        logMessage("Error en autenticación: " + error.message);
+      });
+    }
+
+    function updateSigninStatus(isSignedIn) {
+      if (isSignedIn) {
+        accessToken = gapi.auth2.getAuthInstance().currentUser.get().getAuthResponse().access_token;
+        document.getElementById('post-button').disabled = false;
+        logMessage("Usuario autenticado correctamente");
+      }
+    }
+
     function makeApiCall() {
+      if (!accessToken) {
+        logMessage("Debes autenticarte primero.");
+        return;
+      }
+
       const postContent = {
         kind: "blogger#post",
         title: "Título del Blog desde JS",
         content: "<p>Contenido del blog generado desde JavaScript</p>"
       };
 
-      gapi.client.blogger.posts.insert({
-        blogId: BLOG_ID,
-        resource: postContent
+      gapi.client.request({
+        path: `/blogger/v3/blogs/${BLOG_ID}/posts`,
+        method: "POST",
+        body: postContent,
+        headers: {
+          "Authorization": `Bearer ${accessToken}`,
+          "Content-Type": "application/json"
+        }
       }).then(response => {
-        alert("Entrada publicada con éxito: " + response.result.url);
+        logMessage("Entrada publicada con éxito: " + response.result.url);
       }).catch(err => {
-        console.error("Error al publicar:", err);
-        alert("Error al publicar la entrada: " + err.result.error.message);
+        logMessage("Error al publicar la entrada: " + (err.result.error.message || err.message));
       });
     }
   </script>
 </head>
-<body>
-  <h1>Autenticación con Google GIS y Publicación en Blogger</h1>
-  <div id="buttonDiv"></div>
+<body onload="initClient()">
+  <h1>Autenticación con Google OAuth y Publicación en Blogger</h1>
+  <button id="auth-button" onclick="handleAuthClick()" disabled>Iniciar sesión con Google</button>
   <button id="post-button" disabled onclick="makeApiCall()">Publicar Blog</button>
+  <div id="log" style="border: 1px solid #ccc; padding: 10px; margin-top: 10px;"><h3>Logs:</h3></div>
 </body>
 </html>
