--- a/index.html
+++ b/index.html
@@ -53,25 +53,29 @@
         kind: "blogger#post",
         title: "Las mejores películas para ver en familia durante el fin de semana",
         content: `
-          <p>Nada mejor que un fin de semana en casa disfrutando de buenas películas en familia...</p>
+          <p>Nada mejor que un fin de semana en casa disfrutando de buenas películas en familia. Desde comedias divertidas hasta conmovedoras historias llenas de valores, las plataformas de streaming ofrecen opciones para todas las edades. A continuación, te presentamos una selección de películas ideales para compartir con tus seres queridos.</p>
           <h3>1. <em>Encanto</em> (Disney+)</h3>
-          <p>Una mágica historia sobre la familia Madrigal...</p>
+          <p>Una mágica historia sobre la familia Madrigal y sus increíbles dones. Con canciones inolvidables y una emotiva trama, es perfecta para ver con niños y adultos.</p>
           <h3>2. <em>Paddington 2</em> (Prime Video)</h3>
-          <p>Las divertidas aventuras de un oso educado...</p>
+          <p>Las divertidas aventuras de un oso educado y bondadoso en Londres harán reír a toda la familia mientras transmiten un hermoso mensaje sobre la amabilidad.</p>
           <h3>3. <em>Mi vecino Totoro</em> (Netflix)</h3>
-          <p>Un clásico del Studio Ghibli lleno de fantasía...</p>
+          <p>Un clásico del Studio Ghibli lleno de fantasía, ternura y conexión con la naturaleza que enamora a niños y adultos por igual.</p>
           <h3>4. <em>La familia Mitchell vs. las máquinas</em> (Netflix)</h3>
-          <p>Una comedia animada repleta de acción...</p>
+          <p>Una comedia animada repleta de acción, tecnología y un poderoso mensaje sobre la importancia de la unión familiar.</p>
           <h3>5. <em>Coco</em> (Disney+)</h3>
-          <p>Esta joya de Pixar celebra la cultura mexicana...</p>
+          <p>Esta joya de Pixar celebra la cultura mexicana y los lazos familiares de una manera emotiva y visualmente espectacular.</p>
           <h3>¿Qué hace que una película sea perfecta para la familia?</h3>
-          <p>Las mejores películas familiares combinan entretenimiento y valores positivos...</p>
+          <p>Las mejores películas familiares combinan entretenimiento, valores positivos y la capacidad de conectar con personas de diferentes edades. A menudo, incluyen temas de amistad, trabajo en equipo, amor y superación personal.</p>
           <h3>Recomendaciones de imágenes para acompañar el artículo:</h3>
           <ul>
-            <li>Familia reunida en el sofá viendo una película.</li>
-            <li>Personajes icónicos de películas familiares.</li>
-            <li>Palomitas de maíz y control remoto en una mesa.</li>
+            <li>Familia reunida en el sofá viendo una película. (Palabras clave: "family movie night", "watching movies at home")</li>
+            <li>Personajes icónicos de películas familiares. (Palabras clave: "family-friendly movie characters", "animated film heroes")</li>
+            <li>Palomitas de maíz y control remoto en una mesa. (Palabras clave: "movie snacks", "home cinema setup")</li>
           </ul>
+          <h3>Título sugerido para el artículo:</h3>
+          <p><strong>"Las mejores películas para disfrutar en familia durante el fin de semana"</strong></p>
+          <h3>Palabras clave:</h3>
+          <p>películas familiares recomendadas, cine para toda la familia, mejores películas para ver con niños, películas animadas populares, películas para disfrutar en casa, recomendaciones de cine familiar.</p>
         `,
         published: scheduledTime,
         labels: ["Películas familiares", "Recomendaciones", "Streaming"]
