--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           }
           accessToken = response.access_token;
           document.getElementById('post-button').disabled = false;
+          document.getElementById('fetch-button').disabled = false;
           logMessage("Autenticación exitosa");
         }
       });
@@ -51,34 +52,10 @@
 
       const postContent = {
         kind: "blogger#post",
-        title: "Las mejores películas para ver en familia durante el fin de semana",
-        content: `
-          <p>Nada mejor que un fin de semana en casa disfrutando de buenas películas en familia. Desde comedias divertidas hasta conmovedoras historias llenas de valores, las plataformas de streaming ofrecen opciones para todas las edades. A continuación, te presentamos una selección de películas ideales para compartir con tus seres queridos.</p>
-          <h3>1. <em>Encanto</em> (Disney+)</h3>
-          <p>Una mágica historia sobre la familia Madrigal y sus increíbles dones. Con canciones inolvidables y una emotiva trama, es perfecta para ver con niños y adultos.</p>
-          <h3>2. <em>Paddington 2</em> (Prime Video)</h3>
-          <p>Las divertidas aventuras de un oso educado y bondadoso en Londres harán reír a toda la familia mientras transmiten un hermoso mensaje sobre la amabilidad.</p>
-          <h3>3. <em>Mi vecino Totoro</em> (Netflix)</h3>
-          <p>Un clásico del Studio Ghibli lleno de fantasía, ternura y conexión con la naturaleza que enamora a niños y adultos por igual.</p>
-          <h3>4. <em>La familia Mitchell vs. las máquinas</em> (Netflix)</h3>
-          <p>Una comedia animada repleta de acción, tecnología y un poderoso mensaje sobre la importancia de la unión familiar.</p>
-          <h3>5. <em>Coco</em> (Disney+)</h3>
-          <p>Esta joya de Pixar celebra la cultura mexicana y los lazos familiares de una manera emotiva y visualmente espectacular.</p>
-          <h3>¿Qué hace que una película sea perfecta para la familia?</h3>
-          <p>Las mejores películas familiares combinan entretenimiento, valores positivos y la capacidad de conectar con personas de diferentes edades. A menudo, incluyen temas de amistad, trabajo en equipo, amor y superación personal.</p>
-          <h3>Recomendaciones de imágenes para acompañar el artículo:</h3>
-          <ul>
-            <li>Familia reunida en el sofá viendo una película. (Palabras clave: "family movie night", "watching movies at home")</li>
-            <li>Personajes icónicos de películas familiares. (Palabras clave: "family-friendly movie characters", "animated film heroes")</li>
-            <li>Palomitas de maíz y control remoto en una mesa. (Palabras clave: "movie snacks", "home cinema setup")</li>
-          </ul>
-          <h3>Título sugerido para el artículo:</h3>
-          <p><strong>"Las mejores películas para disfrutar en familia durante el fin de semana"</strong></p>
-          <h3>Palabras clave:</h3>
-          <p>películas familiares recomendadas, cine para toda la familia, mejores películas para ver con niños, películas animadas populares, películas para disfrutar en casa, recomendaciones de cine familiar.</p>
-        `,
+        title: document.getElementById('title').value,
+        content: document.getElementById('content').value,
         published: scheduledTime,
-        labels: ["Películas familiares", "Recomendaciones", "Streaming"]
+        labels: document.getElementById('labels').value.split(',')
       };
 
       fetch(`https://www.googleapis.com/blogger/v3/blogs/${BLOG_ID}/posts`, {
@@ -99,12 +76,52 @@
       })
       .catch(err => logMessage("Error en la solicitud: " + err.message));
     }
+
+    function fetchBlogData() {
+      if (!accessToken) {
+        logMessage("Debes autenticarte primero.");
+        return;
+      }
+
+      fetch(`https://www.googleapis.com/blogger/v3/blogs/${BLOG_ID}/posts?maxResults=1&orderBy=published`, {
+        method: "GET",
+        headers: {
+          "Authorization": `Bearer ${accessToken}`
+        }
+      })
+      .then(response => response.json())
+      .then(data => {
+        if (data.items && data.items.length > 0) {
+          const latestPost = data.items[0];
+          document.getElementById('title').value = latestPost.title;
+          document.getElementById('content').value = latestPost.content;
+          document.getElementById('labels').value = latestPost.labels ? latestPost.labels.join(',') : '';
+          logMessage("Última publicación extraída con éxito");
+        } else {
+          logMessage("No se encontraron publicaciones");
+        }
+      })
+      .catch(err => logMessage("Error al obtener datos del blog: " + err.message));
+    }
   </script>
 </head>
 <body onload="initClient()">
   <h1>Autenticación con Google OAuth y Publicación en Blogger</h1>
   <button id="auth-button" onclick="handleAuthClick()" disabled>Iniciar sesión con Google</button>
+  <button id="fetch-button" onclick="fetchBlogData()" disabled>Extraer datos del último blog</button>
   <button id="post-button" disabled onclick="makeApiCall()">Publicar Blog</button>
+  <div>
+    <label>Título:</label>
+    <input type="text" id="title" placeholder="Ingrese el título">
+  </div>
+  <div>
+    <label>Contenido:</label>
+    <textarea id="content" rows="6" placeholder="Ingrese el contenido"></textarea>
+  </div>
+  <div>
+    <label>Etiquetas (separadas por coma):</label>
+    <input type="text" id="labels" placeholder="Ejemplo: Películas, Recomendaciones">
+  </div>
   <div id="log" style="border: 1px solid #ccc; padding: 10px; margin-top: 10px;"><h3>Logs:</h3></div>
 </body>
 </html>
