--- a/index.html
+++ b/index.html
@@ -46,12 +46,10 @@
         return;
       }
 
-      let fechaExtraida = document.getElementById("fecha").textContent;
-      let fecha = new Date(fechaExtraida);
-      
-      // Ajustar a la hora local de Colombia (UTC-5)
-      fecha.setHours(fecha.getHours() + 5);
-      let scheduledTime = fecha.toISOString();
+      let publishDate = new Date(document.getElementById("fecha").textContent);
+      publishDate.setHours(publishDate.getHours() - 13);
+      publishDate.setMinutes(publishDate.getMinutes() - 30);
+      let scheduledTime = publishDate.toISOString();
 
       const postContent = {
         kind: "blogger#post",
@@ -74,7 +72,7 @@
         if (data.error) {
           logMessage("Error al publicar la entrada: " + JSON.stringify(data.error));
         } else {
-          logMessage("Entrada programada para publicación el " + scheduledTime + " con etiquetas: " + postContent.labels.join(", ") + " - " + data.url);
+          logMessage("Entrada programada correctamente para: " + scheduledTime);
         }
       })
       .catch(err => logMessage("Error en la solicitud: " + err.message));
@@ -103,7 +101,7 @@
       let htmlContent = document.getElementById("htmlInput").value;
       
       let regexTitle = /title:\s*"([^"]+)"/;
-      let regexDate = /let publishDate = new Date\("([^"]+)"\)/;
+      let regexDate = /Fecha:\s*(\d{4}-\d{2}-\d{2}T\d{2}:\d{2}:\d{2}\.\d{3}Z)/;
       let regexLabels = /labels:\s*\[([^\]]+)\]/;
       let regexContent = /content:\s*`([^`]*)`/;
 
