--- a/index.html
+++ b/index.html
@@ -46,18 +46,22 @@
         return;
       }
 
-      let dateInput = document.getElementById("fecha").textContent;
-      let publishDate = new Date(dateInput);
+      let rawDate = document.getElementById("fecha").textContent;
+      if (!rawDate || rawDate === "No encontrado") {
+        logMessage("Fecha no encontrada en el contenido.");
+        return;
+      }
 
-      // Ajustar horario para que coincida con Colombia (-5 UTC)
-      publishDate.setHours(publishDate.getHours() - 5);
+      let publishDate = new Date(rawDate);
+      publishDate.setHours(publishDate.getHours() - 5); // Ajuste de UTC a Colombia (UTC-5)
       let scheduledTime = publishDate.toISOString();
 
       const postContent = {
         kind: "blogger#post",
         title: document.getElementById("titulo").textContent || "Sin título",
         content: document.getElementById("content").textContent || "Sin contenido",
-        scheduled: scheduledTime,
+        status: "scheduled",
+        published: scheduledTime,
         labels: document.getElementById("etiquetas").textContent.split(", ") || []
       };
 
@@ -74,7 +78,7 @@
         if (data.error) {
           logMessage("Error al publicar la entrada: " + JSON.stringify(data.error));
         } else {
-          logMessage("Entrada programada para publicación con etiquetas: " + postContent.labels.join(", ") + " - " + data.url);
+          logMessage("Entrada programada para: " + publishDate.toLocaleString("es-CO") + " con etiquetas: " + postContent.labels.join(", ") + " - " + data.url);
         }
       })
       .catch(err => logMessage("Error en la solicitud: " + err.message));
