--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       // Fijar la hora deseada en la zona horaria local (UTC-5)
       localDate.setHours(14, 0, 0, 0);
       
-      // Convertir a UTC restando 7 horas y 30 minutos
-      let utcDate = new Date(localDate.getTime() - (7 * 60 * 60 * 1000 + 30 * 60 * 1000));
+      // Convertir a UTC sumando 5 horas (Colombia está en UTC-5)
+      let utcDate = new Date(localDate.getTime() + (5 * 60 * 60 * 1000));
       let scheduledTime = utcDate.toISOString();
       
       logMessage(`Fecha extraída: ${rawDate}`);
